<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.result.questionnaire.QuestionnaireFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.register.verifikasisigin.verifikasireg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Informasi Personal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/kuesioner_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:text="@string/vrf1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text" />

            <RadioGroup
                android:id="@+id/kuesioner_group_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="9dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kuesioner_text_1">

                <RadioButton
                    android:id="@+id/yes1"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="Iya" />

                <RadioButton
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="92dp"
                    android:enabled="false"
                    android:text="Tidak" />

            </RadioGroup>

            <TextView
                android:id="@+id/kuesioner_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:text="@string/vrf2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kuesioner_group_1" />

            <RadioGroup
                android:id="@+id/kuesioner_group_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="9dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kuesioner_text_2">

                <RadioButton
                    android:id="@+id/yes2"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="Iya" />

                <RadioButton
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="92dp"
                    android:enabled="false"
                    android:text="Tidak" />

            </RadioGroup>

            <TextView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF2121"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/vrf"
                android:textColor="#fff"
                android:textSize="11sp"
                app:layout_constraintTop_toBottomOf="@id/kuesioner_group_2"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/kuesioner_text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:text="@string/vrf3"
                android:textColor="#000"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:layout_editor_absoluteX="16dp" />

            <RadioGroup
                android:id="@+id/kuesioner_group_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="9dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kuesioner_text_3">

                <RadioButton
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Iya" />

                <RadioButton
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="92dp"
                    android:text="tidak" />

                <RadioButton
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="92dp"
                    android:text="ragu"
                    android:textAlignment="textEnd" />

            </RadioGroup>

            <TextView
                android:id="@+id/kuesioner_text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:text="@string/vrf4"
                app:layout_constraintTop_toBottomOf="@id/kuesioner_group_3"
                tools:layout_editor_absoluteX="16dp" />

            <RadioGroup
                android:id="@+id/kuesioner_group_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="9dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kuesioner_text_4">

                <RadioButton
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Iya" />

                <RadioButton
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="92dp"
                    android:text="tidak" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recyclerview"
        android:layout_width="382dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>