<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login1" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/uilayout_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewsyarat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/agreement1"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/textkebijakan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textkebijakan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="21dp"
                android:fontFamily="sans-serif"
                android:text="@string/agreement2"
                android:textColor="#9A2A2A"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:focusableInTouchMode="true"
                android:textColor="#696867"
                app:helperText="Contoh: 0812-3456-7890"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:prefixTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:startIconDrawable="@drawable/ic_flag_of_indonesia"
                app:startIconTintMode="screen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif"
                    android:hint="@string/texthintnomor"
                    android:inputType="phone"
                    android:maxLength="14"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#696867"
                    android:textSize="18sp"
                    android:tooltipText="0812-3456-7890" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/numberphone"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:digits="0123456789"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:fontFamily="sans-serif"
                android:hint="@string/texthintnomor"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="13"
                android:textColor="#696867"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/next_login2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/buttonui"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:text="MULAI"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="PILIH METODE VERIFIKASI"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>